--- a/landing/landing.css
+++ b/landing/landing.css
@@ -1,27 +1,29 @@
 .wrapper {
   display: grid;
-  padding-top: 144px;
+  padding: 144px 0;
   grid-template-columns: 80px repeat(12, 1fr) 80px;
-  grid-template-rows: repeat(7, minmax(750px, 1fr));
+  grid-template-rows: repeat(7, 1fr);
   gap: 10px;
   grid-template-areas:
-    '.    fImg  fImg  fImg  fImg  fImg  .     fInfo fInfo fInfo fInfo fInfo fInfo .     .'
-    '.    cInfo cInfo cInfo cInfo cInfo cInfo .     cImg  cImg  cImg  cImg  cImg  cImg  cImg'
-    '.    eImg  eImg  eImg  eImg  eImg  .     eInfo eInfo eInfo eInfo eInfo eInfo .     .'
-    '.    sInfo sInfo sInfo sInfo sInfo sInfo .     .     sImg  sImg  sImg  sImg  .     .'
-    '.    sInfo sInfo sInfo sInfo sInfo sInfo .     .     sImg  sImg  sImg  sImg  .     .'
-    'oImg oImg  oImg  oImg  oImg  oImg  .     oInfo oInfo oInfo oInfo oInfo oInfo oInfo oInfo'
-    '.    lInfo lInfo lInfo lInfo lInfo lInfo .     lImg  lImg  lImg  lImg  lImg  lImg  .';
+    '.    hImg  hImg  hImg  hImg  .  hInfo     hInfo hInfo hInfo hInfo hInfo hInfo .     .'
+    '.    fImg  fImg  fImg  fImg  fImg  .     fInfo fInfo fInfo fInfo fInfo fInfo  .     .'
+    '.    cInfo cInfo cInfo cInfo cInfo cInfo .     cImg  cImg  cImg  cImg  cImg   cImg  cImg'
+    '.    eImg  eImg  eImg  eImg  eImg  .     eInfo eInfo eInfo eInfo eInfo eInfo  .     .'
+    '.    sInfo sInfo sInfo sInfo sInfo sInfo .     .     sImg  sImg  sImg  sImg   .     .'
+    'oImg oImg  oImg  oImg  oImg  oImg  .     oInfo oInfo oInfo oInfo oInfo oInfo  oInfo oInfo'
+    '.    lInfo lInfo lInfo lInfo lInfo lInfo .     lImg  lImg  lImg  lImg  lImg   lImg  .';
 }
 
-.landingImg {
-  max-height: 750px;
+.requestAccessMobile {
+  display: none;
 }
 
 .heroImage {
   grid-column: col-start / span 4;
   grid-row: 1 / span 1;
   grid-area: hImg;
+  min-width: 400px;
+  align-self: center;
 }
 
 .heroInfo {
@@ -34,6 +36,7 @@
 .federatedImage {
   align-self: center;
   grid-area: fImg;
+  min-width: 400px;
 }
 
 .federatedInfo {
@@ -43,7 +46,7 @@
 
 .customizableImage {
   align-self: center;
-  /* min-width: 500px; */
+  min-width: 500px;
   grid-area: cImg;
 }
 
@@ -55,6 +58,7 @@
 .encryptedImage {
   align-self: center;
   grid-area: eImg;
+  min-width: 400px;
 }
 
 .encryptedInfo {
@@ -66,6 +70,7 @@
   justify-self: end;
   align-self: center;
   grid-area: sImg;
+  min-width: 400px;
 }
 
 .sovereignInfo {
@@ -76,6 +81,7 @@
 .openSourceImage {
   align-self: center;
   grid-area: oImg;
+  min-width: 400px;
 }
 
 .openSourceInfo {
@@ -86,6 +92,7 @@
 .lessNoisyImage {
   align-self: center;
   grid-area: lImg;
+  min-width: 400px;
 }
 
 .lessNoisyInfo {
@@ -93,14 +100,24 @@
   grid-area: lInfo;
 }
 
+p.app_landing_subheading {
+  font-family: 'iA Writer Duo S', monospace;
+  color: #7e57c2;
+  font-size: 50px;
+  letter-spacing: -0.01em;
+}
+
 @media screen and (max-width: 1099px) {
   .wrapper {
     display: grid;
     grid-template-columns: 16px repeat(6, 1fr) 16px;
-    grid-template-rows: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(0px, 1fr));
     row-gap: 30px;
     column-gap: 10px;
     grid-template-areas:
+      '.    hImg  hImg  hImg  hImg  hImg  hImg  .'
+      '.    hInfo  hInfo  hInfo  hInfo  hInfo  hInfo  .'
+      '.    rBtn  rBtn  rBtn  rBtn  rBtn  rBtn  .'
       '.    fImg  fImg  fImg  fImg  fImg  fImg  .'
       '.    fInfo fInfo fInfo fInfo fInfo fInfo .'
       '.    cImg  cImg  cImg  cImg  cImg  cImg  cImg'
@@ -113,6 +130,25 @@
       '.    oInfo oInfo oInfo oInfo oInfo oInfo .'
       '.    lImg  lImg  lImg  lImg  lImg  lImg  .'
       '.    lInfo lInfo lInfo lInfo lInfo lInfo .';
+  }
+
+  p.app_landing_subheading {
+    font-size: 1.5rem;
+  }
+
+  .heroImage {
+    display: none;
+  }
+
+  .requestAccessMobile {
+    display: block;
+    border-radius: 4px;
+    padding: 12px 24px;
+    background-color: #7e57c2;
+    color: #fff;
+    grid-area: rBtn;
+    font-weight: 500;
+    border: 0;
   }
 
   .federatedImage {
@@ -146,13 +182,6 @@
   .lessNoisyInfo {
     padding-bottom: 80px;
   }
-}
-
-p.app_landing_subheading {
-  font-family: 'iA Writer Duo S', monospace;
-  color: #7e57c2;
-  font-size: 50px;
-  letter-spacing: -0.01em;
 }
 
 /* 
